# nba_task

./: nba_com_Player.html  nba_com_Player.txt  nba_com_Team.html  nba_com_Team.txt
nba_scripts/: download_team_and_players.py  extract_team_and_players.py  generate_urls.py  pyproject.toml
