[tool.poetry]
name = "nba-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "nba_data"}]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.8.2"
beautifulsoup4 = "^4.12.0"
requests = "^2.28.2"
scrapy = "^2.8.0"
pandas = "^1.5.3"
html5lib = "^1.1"
webdriver-manager = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
